tests/algorithms/x/Clojure/project_euler/problem_040/sol1.error
run: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_040/sol1.clj:50:784).
Can only recur from tail position

Full report at:
/tmp/clojure-13955971013971839869.edn
